updated React divs, footer, contact and blog

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://k-bugz.github.io/ReactPortfolio",
   "name": "react-portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -40,5 +40,16 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
+  },
+  "description": "This is my portfolio that I used making React. I really like using React especially with the single page application. It gives such an a great user experience with page navigation. Reading up online was tricky with the newer updates to react and it seems like the community hasn’t caught up to the new syntax. I particularly like the new component form of coding that the newer for of React allows. I used it to create my blog posts and for my projects sections as they are broken down into smaller pieces.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/K-Bugz/ReactPortfolio.git"
+  },
+  "author": "Kevin Bugusky",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/K-Bugz/ReactPortfolio/issues"
   }
 }
